# wdt-rs

./: .gitignore  Cargo.toml  build.sh
certs/: private.pem  public.der  public.pem  wdt.pfx  wdt.pfx.old  wdtcert.pem  wdtkey.pem
src/common/: codec.rs  errors.rs  httpcodec.rs  httpreq.rs  lib.rs  proto.rs  request.rs  ssl.rs  utils.rs
src/wclient/: client.rs  clientmain.rs  errors.rs  service.rs  tlsclient.rs  wclient.rs
src/wserver/: server.rs  service.rs  srvmain.rs  wserver.rs
