[package]
name = "wdt"
version = "0.1.0"
authors = ["Sudeep Jathar <sudeep.jathar@gmail.com>"]

[[bin]]
name = "wserver"
path = "src/wserver/wserver.rs"

[[bin]]
name = "wclient"
path = "src/wclient/wclient.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
error-chain = "0.11.0"
rmp = "0.8"
rmpv = "0.4"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
log = "0.3"
simplelog = "0.4.2"
