[package]
name = "wdt"
version = "0.1.0"
authors = ["Sudeep Jathar <sudeep.jathar@gmail.com>"]

[[bin]]
name = "wdtserver"
path = "src/wserver/srvmain.rs"

[[bin]]
name = "wdtclient"
path = "src/wclient/clientmain.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
error-chain = "0.11.0"
rmp = "0.8"
rmpv = "0.4"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
log = "0.3"
simplelog = "0.4.2"
threadpool = "1.7.0"
rand = "0.3.17"
thread-id = "3.2.0"
futures-cpupool = "0.1.6"
byteorder = "1.1.0"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
openssl = "0.9.20"

[features]
test = []